--- a/css/style-tutorial.css
+++ b/css/style-tutorial.css
@@ -8,6 +8,10 @@
     /* or we can do padding: 1px 2px 3px 4px or use percentages like 20% (y) 50% (x); */
     /* if we have 3 values, it would pad top, y, and bottom*/
     margin: 0;
+    font-family: sans-serif;
+
+    /* how to declare and use css variables */
+    --primary-background-color
 }
 
 body {
@@ -23,7 +27,68 @@ body {
 }
 
 
-
 .heading-group {
   font-family: sans-serif;
+}
+
+ /* tutorial for laying elements out on the html document
+    replicating the news subsection on the oakland.edu webpage */
+
+/* root node of the section */
+.news-events {
+
+}
+
+/* immediate child of root node */
+.section-title {
+  padding: 10px; 
+  margin-bottom: 20px; /* separation of the child vertically from this one */
+  width: 100%; /* use the full amount of the screen, great for different devices*/ 
+}
+
+.section-title-text{
+  padding: 10px;
+  font-size: 24px;
+  font-weight: 700;
+  text-decoration: underline;
+  color: #def2c8; 
+}
+
+.media-wrapper {
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center; /* space around, space between, space evenly*/
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.news-container{
+  border: 1px solid rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+
+.news-media{
+  padding: 15px;
+  margin-bottom: 30px;
+  width: 50px;
+  max-width: 100px;
+  height: 50px;
+  max-height: 100px;
+}
+
+.news-images{
+  padding: 5px;
+  width: 150px;
+  height: 150px;
+}
+
+.news-text > a > h3 {
+  padding: 10px;
+  color: #def2c8;
+  font-size: 16px;
+  font-weight: 300;
 }
